--- a/Test02/Views/PhongKho/NhapKho.cshtml
+++ b/Test02/Views/PhongKho/NhapKho.cshtml
@@ -59,17 +59,20 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.LoaiPhieu)
                             </td>
-                            <td>
+                            <td class="element-button">
                                 @{ string str = item.MaPhieu.Substring(0, 2);}
                                 @if (str == "PX")
                                 {
                                     @Html.ActionLink("Chi tiết", "ChiTietPhieuXuatKho", new { id = item.MaPhieu })
+                                    <span> || </span>
+                                    @Html.ActionLink("Xóa", "XoaPhieuXuatKho", new { id = item.MaPhieu })
                                 }
                                 else
                                 {
                                     @Html.ActionLink("Chi tiết", "ChiTietPhieuNhapKho", new { id = item.MaPhieu })
+                                    <span> || </span>
+                                    @Html.ActionLink("Xóa", "XoaPhieuNhapKho", new { id = item.MaPhieu })
                                 }
-                                @Html.ActionLink("Xóa", "XoaPhieuNhapKho", new { id = item.MaPhieu })
                             </td>
                         </tr>
                     }
@@ -110,39 +113,7 @@
 <script src="~/Scripts/pace.min.js"></script>
 <!-- Page specific javascripts-->
 <script type="text/javascript" src="~/Scripts/chart.js"></script>
-<script type="text/javascript">
-    var data = {
-        labels: ["Tháng 1", "Tháng 2", "Tháng 3", "Tháng 4", "Tháng 5", "Tháng 6", "Tháng 7", "Tháng 8", "Tháng 9", "Tháng 10", "Tháng 11", "Tháng 12"],
-        datasets: [{
-            label: "Dữ liệu đầu tiên",
-            fillColor: "rgba(255, 255, 255, 0.158)",
-            strokeColor: "black",
-            pointColor: "rgb(220, 64, 59)",
-            pointStrokeColor: "#fff",
-            pointHighlightFill: "#fff",
-            pointHighlightStroke: "green",
-            data: [20, 59, 90, 51, 56, 100, 40, 60, 78, 53, 33, 81]
-        },
-        {
-            label: "Dữ liệu kế tiếp",
-            fillColor: "rgba(255, 255, 255, 0.158)",
-            strokeColor: "rgb(220, 64, 59)",
-            pointColor: "black",
-            pointStrokeColor: "#fff",
-            pointHighlightFill: "#fff",
-            pointHighlightStroke: "green",
-            data: [48, 48, 49, 39, 86, 10, 50, 70, 60, 70, 75, 90]
-        }
-        ]
-    };
 
-
-    var ctxl = $("#lineChartDemo").get(0).getContext("2d");
-    var lineChart = new Chart(ctxl).Line(data);
-
-    var ctxb = $("#barChartDemo").get(0).getContext("2d");
-    var barChart = new Chart(ctxb).Bar(data);
-</script>
 <!-- Google analytics script-->
 <script type="text/javascript">
     if (document.location.hostname == 'pratikborsadiya.in') {
@@ -161,3 +132,4 @@
         ga('send', 'pageview');
     }
 </script>
+
