--- a/Test02/Views/KhachHang/PageSanPham.cshtml
+++ b/Test02/Views/KhachHang/PageSanPham.cshtml
@@ -1,7 +1,9 @@
-﻿
+﻿@model IEnumerable<Test02.Models.SanPham>
 @{
     ViewBag.Title = "PageSanPham";
     Layout = "~/Views/KhachHang/Layout/_LayoutKhachHang.cshtml";
+    ViewBag.tcdl = "active";
+    ViewBag.Name = "Trang chủ";
 }
 
 <div class="row">
@@ -10,208 +12,21 @@
             <h3 class="tile-title">DANH SÁCH SẢN PHẨM</h3>
             <div class="tile-body">
                 <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-4">
+                    @foreach (var item in Model)
+                    {
+                    <div style="margin:10px;">
                         <div class="widget-small primary coloured-icon">
-                            <img src="/images/customerApp.png" style="height: 100px ; width: 100px;" alt="">
+                            <img src="~/Content/Img/SanPham/7up.jpg" style="height: 100px ; width: 100px;" alt="">
                             <div class="info">
-                                <h4>Coca Cola</h4>
-                                <p><b>Mã sản phẩm: #CA23089</b></p>
-                                <p><span class="badge bg-info">Còn hàng</span></p>
-
+                                <h4>@Html.DisplayFor(modelItem => item.TenSP)</h4>
+                                <p><b>HSD: @Html.DisplayFor(modelItem => item.HanSD)</b></p>
+                                <p><b>Mã sản phẩm: @Html.DisplayFor(modelItem => item.MaSP)</b></p>
+                                <p><span class="badge bg-info">Chi tiết</span></p> <br />
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <div class="widget-small primary coloured-icon">
-                            <img src="/images/customerApp.png" style="height: 100px ; width: 100px;" alt="">
-                            <div class="info">
-                                <h4>Sting </h4>
-                                <p><b>Mã sản phẩm: #ST23089</b></p>
-                                <p><span class="badge bg-info">Còn hàng</span></p>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <div class="widget-small primary coloured-icon">
-                            <img src="/images/customerApp.png" style="height: 100px ; width: 100px;" alt="">
-                            <div class="info">
-                                <h4>Coca Cola Zero sugar</h4>
-                                <p><b>Mã sản phẩm: #CS24389</b></p>
-                                <p><span class="badge bg-danger">Sắp hết hàng</span></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <div class="widget-small primary coloured-icon">
-                            <img src="/images/customerApp.png" style="height: 100px ; width: 100px;" alt="">
-                            <div class="info">
-                                <h4>Coca Cola</h4>
-                                <p><b>Mã sản phẩm: #CA23089</b></p>
-                                <p><span class="badge bg-info">Còn hàng</span></p>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <div class="widget-small primary coloured-icon">
-                            <img src="/images/customerApp.png" style="height: 100px ; width: 100px;" alt="">
-                            <div class="info">
-                                <h4>Sting </h4>
-                                <p><b>Mã sản phẩm: #ST23089</b></p>
-                                <p><span class="badge bg-info">Còn hàng</span></p>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <div class="widget-small primary coloured-icon">
-                            <img src="/images/customerApp.png" style="height: 100px ; width: 100px;" alt="">
-                            <div class="info">
-                                <h4>Coca Cola Zero sugar</h4>
-                                <p><b>Mã sản phẩm: #CS24389</b></p>
-                                <p><span class="badge bg-danger">Sắp hết hàng</span></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <div class="widget-small primary coloured-icon">
-                            <img src="/images/customerApp.png" style="height: 100px ; width: 100px;" alt="">
-                            <div class="info">
-                                <h4>Coca Cola</h4>
-                                <p><b>Mã sản phẩm: #CA23089</b></p>
-                                <p><span class="badge bg-info">Còn hàng</span></p>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <div class="widget-small primary coloured-icon">
-                            <img src="/images/customerApp.png" style="height: 100px ; width: 100px;" alt="">
-                            <div class="info">
-                                <h4>Sting </h4>
-                                <p><b>Mã sản phẩm: #ST23089</b></p>
-                                <p><span class="badge bg-info">Còn hàng</span></p>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <div class="widget-small primary coloured-icon">
-                            <img src="/images/customerApp.png" style="height: 100px ; width: 100px;" alt="">
-                            <div class="info">
-                                <h4>Coca Cola Zero sugar</h4>
-                                <p><b>Mã sản phẩm: #CS24389</b></p>
-                                <p><span class="badge bg-danger">Sắp hết hàng</span></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <div class="widget-small primary coloured-icon">
-                            <img src="/images/customerApp.png" style="height: 100px ; width: 100px;" alt="">
-                            <div class="info">
-                                <h4>Coca Cola</h4>
-                                <p><b>Mã sản phẩm: #CA23089</b></p>
-                                <p><span class="badge bg-info">Còn hàng</span></p>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <div class="widget-small primary coloured-icon">
-                            <img src="/images/customerApp.png" style="height: 100px ; width: 100px;" alt="">
-                            <div class="info">
-                                <h4>Sting </h4>
-                                <p><b>Mã sản phẩm: #ST23089</b></p>
-                                <p><span class="badge bg-info">Còn hàng</span></p>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <div class="widget-small primary coloured-icon">
-                            <img src="/images/customerApp.png" style="height: 100px ; width: 100px;" alt="">
-                            <div class="info">
-                                <h4>Coca Cola Zero sugar</h4>
-                                <p><b>Mã sản phẩm: #CS24389</b></p>
-                                <p><span class="badge bg-danger">Sắp hết hàng</span></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <div class="widget-small primary coloured-icon">
-                            <img src="/images/customerApp.png" style="height: 100px ; width: 100px;" alt="">
-                            <div class="info">
-                                <h4>Coca Cola</h4>
-                                <p><b>Mã sản phẩm: #CA23089</b></p>
-                                <p><span class="badge bg-info">Còn hàng</span></p>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <div class="widget-small primary coloured-icon">
-                            <img src="/images/customerApp.png" style="height: 100px ; width: 100px;" alt="">
-                            <div class="info">
-                                <h4>Sting </h4>
-                                <p><b>Mã sản phẩm: #ST23089</b></p>
-                                <p><span class="badge bg-info">Còn hàng</span></p>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <div class="widget-small primary coloured-icon">
-                            <img src="/images/customerApp.png" style="height: 100px ; width: 100px;" alt="">
-                            <div class="info">
-                                <h4>Coca Cola Zero sugar</h4>
-                                <p><b>Mã sản phẩm: #CS24389</b></p>
-                                <p><span class="badge bg-danger">Sắp hết hàng</span></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <div class="widget-small primary coloured-icon">
-                            <img src="/images/customerApp.png" style="height: 100px ; width: 100px;" alt="">
-                            <div class="info">
-                                <h4>Coca Cola</h4>
-                                <p><b>Mã sản phẩm: #CA23089</b></p>
-                                <p><span class="badge bg-info">Còn hàng</span></p>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <div class="widget-small primary coloured-icon">
-                            <img src="/images/customerApp.png" style="height: 100px ; width: 100px;" alt="">
-                            <div class="info">
-                                <h4>Sting </h4>
-                                <p><b>Mã sản phẩm: #ST23089</b></p>
-                                <p><span class="badge bg-info">Còn hàng</span></p>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-4">
-                        <div class="widget-small primary coloured-icon">
-                            <img src="/images/customerApp.png" style="height: 100px ; width: 100px;" alt="">
-                            <div class="info">
-                                <h4>Coca Cola Zero sugar</h4>
-                                <p><b>Mã sản phẩm: #CS24389</b></p>
-                                <p><span class="badge bg-danger">Sắp hết hàng</span></p>
-                            </div>
-                        </div>
-                    </div>
+            }
+        
                 </div>
             </div>
         </div>
